# LimadouHEPD

./: CMakeLists.txt  README.md
Calo/: CMakeLists.txt  calcpedruns.cc  main.cc
Calo/cmake_code/: CMakeLists.txt  main.cc
Calo/cmake_code/include/: LCaloCalManager.hh
Calo/cmake_code/src/: LCaloCalManager.cc  LEvRec0File.cc
Calo/include/: LCaloCalManager.hh  LCaloCalibrationManager.hh  LCaloSignal.hh  LScintillatorSignal.hh
Calo/src/: LCaloCalManager.cc  LCaloCalibrationManager.cc  LCaloSignal.cc  LLysoSignal.cc  LTriggerSignal.cc  LVetoSignal.cc
Common/: CMakeLists.txt
Common/include/: LCalibration.hh  LEvRec1.hh  LEvRec1File.hh  LParser.hh  LSteeringManager.hh  detector_const.hh
Common/src/: LEvRec0File.cc  LReco01Manager.cc  LSteeringManager.cc
EventReconstruction/: CMakeLists.txt  Doxyfile.in
EventReconstruction/Calo/: CMakeLists.txt
EventReconstruction/Calo/include/: LCaloCalibration.hh  LCaloCalibrationManager.hh  LCaloEqualization.hh  LCaloEqualizationManager.hh  LCaloSignal.hh  LCaloTools.hh  LLysoMSCrystal.hh  LLysoSignal.hh  LOfflineL0Selector.hh  LOfflineTrigger.hh  LScintillatorSignal.hh  LScintillatorsL2.hh  LTriggerCluster.hh  LTriggerPositionEstimator.hh  LTriggerSignal.hh  LVetoSignal.hh  pmtnames.hh
EventReconstruction/Calo/src/: LCaloCalibration.cc  LCaloCalibrationManager.cc  LCaloEqualization.cc  LCaloEqualizationManager.cc  LCaloSignal.cc  LCaloTools.cc  LLysoMSCrystal.cc  LLysoSignal.cc  LOfflineL0Selector.cc  LOfflineTrigger.cc  LScintillatorSignal.cc  LScintillatorsL2.cc  LTriggerCluster.cc  LTriggerSignal.cc  LVetoSignal.cc
EventReconstruction/Common/: CMakeLists.txt
EventReconstruction/Common/include/: LCSESPosition.hh  LCSESPositionManager.hh  LCalibration.hh  LCalibrationManager.hh  LCalibrationMonitor.hh  LEvRec0.hh  LEvRec0.hh~  LEvRec0File.hh  LEvRec1.hh  LEvRec1File.hh  LEvRec2.hh  LEvRec2File.hh  LEvTemp.hh  LL1Selector.hh  LParser.hh  LReco01Manager.hh  LReco12Manager.hh  LStatTools.hh  LSteeringManager.hh  LTracklet.hh  LTrackletMaker.hh  analysis_const.hh  detector_const.hh  gmm.hh  ldsimplevars.hh  leptondiscriminator.hh
EventReconstruction/Common/src/: LCSESPosition.cc  LCSESPositionManager.cc  LCalibration.cc  LCalibration.cc~  LCalibrationManager.cc  LCalibrationMonitor.cc  LEvRec0.cc  LEvRec0.cc~  LEvRec0File.cc  LEvRec0File.cc~  LEvRec1.cc  LEvRec1File.cc  LEvRec2.cc  LEvRec2File.cc  LEvTemp.cc  LL1Selector.cc  LParser.cc  LReco01Manager.cc  LStatTools.cc  LSteeringManager.cc  LTracklet.cc  LTrackletMaker.cc  gmm.cc  ldsimplevars.cc  leptondiscriminator.cc
EventReconstruction/LimadouHEPD/LimadouHEPD.xcodeproj/: project.pbxproj
EventReconstruction/Tracker/: CMakeLists.txt
EventReconstruction/Tracker/include/: LTrackerCalibration.hh  LTrackerCalibrationManager.hh  LTrackerCalibrationSlot.hh  LTrackerCluster.hh  LTrackerFittingTools.hh  LTrackerSignal.hh  LTrackerTools.hh
EventReconstruction/Tracker/src/: LTrackerCalibration.cc  LTrackerCalibrationManager.cc  LTrackerCalibrationSlot.cc  LTrackerCluster.cc  LTrackerFittingTools.cc  LTrackerMask.cc  LTrackerSignal.cc  LTrackerTools.cc
EventReconstruction/analysis/: CalibCheck.cc
EventReconstruction/data/: calibration_template.steer  eqHG.txt  eqLG.txt  equalization_template.steer  reco01_template.steer
EventReconstruction/exe/: CMakeLists.txt  CMakeLists.txt~  CalibCheck.cc  Calibrate.cc  CalibrateCalo.cc  CalibrateTracker.cc  CalibrationMonitor.cc  CaloL2OnAscii.cc  CreateL2empty.cc  EqualizeCalo.cc  Events.cc  L0AnVV.cc  L0Analysis.cc  L0_tin_tfin.cc  L1AnVV.cc  L1Analysis.cc  L1Analysis_Distributions.cc  L1Analysis_ForSummer2018.cc  L1Reader.cc  L1_SilconCorrectedCounts.cc  L2Temp.cc  LSkimmingEvents.cc  OTT.cc  PlotL0.cc  PlotL0_comparison.cc  VVtest.cc  calcpedruns.cc  dictest.cc  stattest.cc  test_LEvRec1.cc  test_template.cc
OrbitReconstruction/: .lddout.swp  .lddout2.swp  CMakeLists.txt  HEPDOrbital.pc.cmake.in  HEPDOrbitalConfig.cmake.in  HEPDOrbitalConfigVersion.cmake.in
OrbitReconstruction/HEPDOrbital-v1-0-2/: HEPDOrbital_header_locations
OrbitReconstruction/HEPDOrbital-v1-0-2/lib/: libHEPDOrbitalCommon.rootmap  libHEPDOrbitalCommon_rdict.pcm
OrbitReconstruction/HEPDOrbital-v1-0-2/share/: HEPDOrbital.pc
OrbitReconstruction/cmake/: CMakeLists.txt  HEPDOrbitalinstallScript.cmake
OrbitReconstruction/common/: CMakeLists.txt
OrbitReconstruction/common/include/: DateTime.h~  LinkDef.hh  TimeSpan.h
OrbitReconstruction/common/src/: Eci.cpp  geomag.cpp
OrbitReconstruction/merger/: CMakeLists.txt
OrbitReconstruction/merger/include/: GeoManagerClass.hh  GeoManagerClassLinkDef.hh
OrbitReconstruction/merger/src/: GeoManagerClass.cc  SimpleDigi.cc
OrbitReconstruction/unifier/: CMakeLists.txt
OrbitReconstruction/unifier/include/: AssociateClass.hh  AssociateClassLinkDef.hh  LOrientationInfo.hh
OrbitReconstruction/unifier/src/: AssociateClass.cc  LOrientationInfo.cc  SimpleAssociate.cc
Simulation/HEPDSW_v4/: CMakeLists.txt
Simulation/HEPDSW_v4/run/: base.mac  multi_jobs.sh
Tools/MC2Lvl0/: CMakeLists.txt  Doxyfile.in
Tools/MC2Lvl0/data/: OptPhot_HG.csv  OptPhot_HG_p228.csv  OptPhot_HG_pol2.csv  OptPhot_HG_pol3.csv  OptPhot_LG.csv  OptPhot_LG_p228.csv  OptPhot_LG_pol2.csv  OptPhot_LG_pol3.csv  PmtSlopeIntercErr_MeanMatteo.csv  PmtSlopeIntercErr_SigmaMatteo.csv  Synthesis_mean_abc_IQ_abc.csv  defaulttrackerpeds.csv  francesco_parameterHG.csv  francesco_parameterLG.csv  laurentHGpeakshift.csv  laurentLGpeakshift.csv  laurent_pmt_e_a_b.csv  nullped.csv  test.txt
Tools/MC2Lvl0/include/: Edep2Edep_PosConverter.hh  Edep2PMTinfoConverter.hh  Edep_Pos.h  LEvRec0Writer.hh  LEvRecMCTruth.hh  MCcoorPhysicalFrame.hh  MapEvents.hh  PMTID.h  PMTinfo.h  PMTnumbers.hh  calomev2adcmethod.hh  csv2fvec.hh  detectorID.h  ecaladc.hh  examplemethod.hh  francescomethod.hh  hits2edeppos.hh  laurentmethod.hh  matteomethod.hh  mev2adcmethod.hh  pmtenum.hh  (+5 more)
Tracker/: CMakeLists.txt
Tracker/cmake_code/: analysis_follega.cc
Tracker/include/: LTrackerCluster.hh  LTrackerSignal.hh
Tracker/src/: LTrackerCluster.cc
exe/: CMakeLists.txt  Reco01.cc
(+433 files in other folders)
